Add Brownie Recipe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <h1>Lasagna Recipe</h1>
+        <h2>Lasagna Recipe</h2>
         <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <h2>Broweednie Recipe</h2>
+        <a href="./recipes/brownie.html">Brownie Recipe</a>
     </body>
 </html>
