--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <h2>Lasagna Recipe</h2>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-        <h2>Broweednie Recipe</h2>
-        <a href="./recipes/brownie.html">Brownie Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/brownie.html">Brownie Recipe</a></li>
+            <li><a href="./recipes/brie.html">Baked Brie Recipe</a></li>
+        </ul>
     </body>
 </html>
