Add style with CSS

--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Broweednie recipe</h1>
-    <img src="../images/brownie.jpeg" alt="Picture of Lasagna">
+    <img src="../images/brownie.jpeg" alt="Picture of Brownie">
     <h2>How To Make Brownie with Cannabis</h2>
     <p>When edibles taste as good as brownies do, they can cause a munchies loop of getting hungry, then eating more brownies. Think ahead and make a second batch of regular brownies to avoid the temptation of eating one too many.</p>
     <p>You can follow this recipe, using the same quantity of standard unsalted butter instead of cannabutter. The combination of rich chocolate and crunchy nuts masks the flavor of weed, so be sure to label them carefully. No one likes to play edible roulette.</p>
-    <h3>Broweednie Ingredients:</h3>
-    <ul>
+    <ul class="ingr">
+        <h3>Broweednie Ingredients:</h3>
+
         <p><em>Cannabutter</em></p>
         <li><strong>1/2 cup</strong> (113 grams) unsalted butter</li>
         <li><strong>1 gram</strong> quality cannabis flower</li>
@@ -29,9 +31,10 @@
         <li><strong>3/4 cup</strong> (90 grams) all-purpose flour</li>
         <li><strong>1/2 cup</strong> (57 grams) chopped toasted nuts (optional)</li>
     </ul>
-    <h3>How to Make Broweednie Step-By-Step</h3>
     <p></p>
-    <ol>
+    <ol class="prep">
+        <h3>How to Make Broweednie Step-By-Step</h3>
+
         <li>Make the cannabutter, following the quantities listed above and my step-by-step guide linked in the Author Notes.</li>
         <li>Butter an 8x8-inch pan, then dust with cocoa. Heat the oven to 350°F (177°C).</li>
         <li>In a bain marie (or in the microwave in 10-second intervals), melt the cannabutter and dark chocolate. Remove the bowl from the heat, then add the sugar, molasses, vanilla, and salt.</li>
