--- a/recipes/brie.html
+++ b/recipes/brie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
@@ -12,8 +13,9 @@
     <h2>How To Make Baked Brie</h2>
     <p>One of the most common mistakes people make when serving cheese is not letting it come to room temperature first, so that all the flavors can be fully realized.</p>
     <p>This beautiful baked stuffed brie takes that principle to the next level.</p>
-    <h3>Baked Brie Ingredients:</h3>
-    <ul>
+    <ul class="ingr">
+        <h3>Baked Brie Ingredients:</h3>
+
         <li><strong>1</strong> small wheel of brie (about 6 to 8 inches), chilled</li>
         <li><strong>¼ cup</strong> dried cranberries</li>
         <li><strong>¼ cup</strong> chopped walnuts</li>
@@ -21,9 +23,10 @@
         <li><strong>1</strong> egg, beaten with</li>
         <li><strong>1 teaspoon</strong> water</li>
     </ul>
-    <h3>How to Make Brie Step-By-Step</h3>
+    
     <p></p>
-    <ol>
+    <ol class="prep">
+        <h3>How to Make Brie Step-By-Step</h3>
         <li>Score the side of a wheel of brie all the way around with a sharp paring knife. Cut directly on the "equator" through the rind. Using a long piece of string or dental floss, wrap the string around the brie on the newly made cut. Loop one end of the string over the other (a half knot). Then pulling the ends of the string in opposite directions, cut the brie in half.</li>
         <li>Press the dried cranberries on one cut side of the brie, and the walnuts on the other. Quickly put the 2 sides back together with the cranberries on top of the walnuts. Press together and stuff back in any cranberries or walnuts that fell out.</li>
         <li>Roll out a thawed sheet of puff pastry on a floured surface to about 1/8-inch thickness. Place brie in center of pastry. Gently pull up edges to ensure you have enough dough to entirely wrap the brie. You can trim off the corners if there is too much dough. Brush the dough with the egg wash. Fold one edge of the dough over the brie and then the opposite side. Fold over the remaining edges and complexly encase the brie. You can trim off excess pieces of dough, if necessary. Flip the brie over so the seam is at the bottom; gently press in the sides to snug the dough against the brie. Brush the top and sides of the wrapped brie with egg wash.</li>
