--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
     <h2>How To Make Lasagna</h2>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
     <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
-    <h3>Lasagna Ingredients:</h3>
-    <ul>
+    <ul class="ingr">
+        <h3>Lasagna Ingredients:</h3>
         <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li><strong>Onion and Garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
         <li><strong>Tomato Products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
@@ -23,9 +24,10 @@
         <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
         <li><strong>Eggs:</strong>: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
     </ul>
-    <h3>How to Make Lasagna Step-By-Step</h3>
+    
     <p></p>
-    <ol>
+    <ol class="prep">
+        <h3>How to Make Lasagna Step-By-Step</h3>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
         <li>Make the ricotta mixture.</li>
